[package]
name = "secpass"
version = "0.1.0"
edition = "2021"
authors = ["SecPass"]
description = "A secure, minimal password manager"

[[bin]]
name = "secpass"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui_extras = "0.27"
rfd = "0.14"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }

# Secure memory
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }

# TOTP
totp-rs = { version = "5.5", features = ["gen_secret", "qr"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[package.metadata.winres]
FileDescription = "SecPass Password Manager"
ProductName = "SecPass"
